--- a/Faveo Helpdesk Pro/GoogleService-Info.plist
+++ b/Faveo Helpdesk Pro/GoogleService-Info.plist
@@ -25,15 +25,15 @@
 	<key>STORAGE_BUCKET</key>
 	<string>faveo-helpdesk-pro-6dafa.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_GCM_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:661051343223:ios:1581c2938664109a</string>
 	<key>DATABASE_URL</key>
