--- a/podfile
+++ b/podfile
@@ -13,4 +13,8 @@ pod 'SDWebImage'
 pod 'RKDropdownAlert'
 pod 'XLForm', '~> 3.0'
 pod "RMessage"
+pod 'Fabric', '~> 1.7.3'
+pod 'Crashlytics', '~> 3.10.0'
+pod 'Firebase/Crash'
+
 end
