--- a/podfile
+++ b/podfile
@@ -17,5 +17,6 @@ pod 'Fabric', '~> 1.7.3'
 pod 'Crashlytics', '~> 3.10.0'
 pod 'Firebase/Crash'
 pod "UITextField_AutoSuggestion"
+pod 'HSAttachmentPicker'
 
 end
