--- a/Faveo Helpdesk Pro/Info.plist
+++ b/Faveo Helpdesk Pro/Info.plist
@@ -43,6 +43,8 @@
 	</dict>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>$(PRODUCT_NAME) photos and video use.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>For attaching photos and video.</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
